# rockpredict

./: .env.example  .replit  alert_system.py  app.py  communication.py  config.json  data_generator.py  database.py  mine_monitoring.db  ml_models.py  pyproject.toml  replit.md  requirements.txt  rockfall_prediction.db  utils.py  visualizations.py
.streamlit/: config.toml
alerts/: notification_system.py
analysis/: historical_analysis.py
assets/: style.css
attached_assets/extracted/MineRockGuard/: .replit  app.py  pyproject.toml
attached_assets/extracted/MineRockGuard/ai/: drone_analysis.py
attached_assets/extracted/MineRockGuard/alerts/: notification_system.py
attached_assets/extracted/MineRockGuard/analysis/: historical_analysis.py
attached_assets/extracted/MineRockGuard/communication/: lorawan_simulator.py
attached_assets/extracted/MineRockGuard/dashboard/: real_time_dashboard.py
attached_assets/extracted/MineRockGuard/data/: synthetic_data_generator.py
attached_assets/extracted/MineRockGuard/database/: data_ingestion.py  database_manager.py  schema.py
attached_assets/extracted/MineRockGuard/hardware/: siren_control.py
attached_assets/extracted/MineRockGuard/iot/: sensor_manager.py
attached_assets/extracted/MineRockGuard/mobile/: field_app.py
attached_assets/extracted/MineRockGuard/models/: rockfall_predictor.py
attached_assets/extracted/MineRockGuard/utils/: config_manager.py
attached_assets/extracted/MineRockGuard/visualization/: mine_3d_viz.py
communication/: drone_integration.py  drone_system.py  lorawan_simulator.py
(+49 files in other folders)
