[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "opencv-python>=4.11.0.86",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "twilio>=9.8.1",
]
